# IndepensenseSystem

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-pi.txt  requirements.txt
docs/: graphhopper.md  hardware.md  photon.md  voice.md
src/indepensense/: config.py
src/indepensense/routing/: __init__.py  base.py  graphhopper.py  mock.py  photon.py
src/indepensense/routing/tests/manual/: end_to_end_test.py
src/indepensense/routing/tests/unit/: test_graphhopper.py  test_photon.py
src/indepensense/sensors/: __init__.py  base.py  dyp_a22.py  mock.py  mpu6050.py
src/indepensense/sensors/tests/manual/: dual_dyp_test.py  single_dyp_test.py  single_mpu6050_test.py
src/indepensense/sensors/tests/unit/: test_dyp_a22.py  test_mpu6050.py
src/indepensense/vision/: __init__.py  base.py  detector.py  picamera.py
src/indepensense/vision/tests/manual/: capture_test.py  detect_test.py  record_test.py
src/indepensense/voice/: __init__.py  base.py  mock.py  piper.py  whisper.py
src/indepensense/voice/tests/manual/: stt_test.py  tts_test.py
src/sensors/: dyp_a22.py
src/sensors/tests/: dual_dyp_test.py  single_dyp_test.py
